<resources>
    <string name="app_name">Notisnow</string>
    <string name="title_home">공과대학</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_chemistry">화공생명공학부</string>


    <string name="title_ict">ICT융합공학부</string>
    <string name="title_it">IT공학전공</string>
    <string name="title_electronic">전자공학전공</string>
    <string name="title_physics">물리</string>


    <string name="title_mechanical">기계시스템학부</string>


    <!--not contained in this version-->
    <string name="title_sw">소프트웨어학부</string>
    <string name="title_basics">기초공학부</string>

    <string name="version_name">Build version: Snow 0.1.0</string>
    <string name="title_activity_dev_info">DevInfo</string>


    <string name="dev_info">개발자 정보</string>
    <string name="open_source">오픈소스 라이브러리</string>
</resources>
