<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_software"
        android:icon="@drawable/major_software"
        android:title="@string/title_sw"/>

    <item
        android:id="@+id/navigation_chemistry"
        android:icon="@drawable/major_chemic"
        android:title="@string/title_chemistry"/>

    <item
        android:id="@+id/navigation_ict"
        android:icon="@drawable/major_ict"
        android:title="@string/title_ict"/>

    <item
        android:id="@+id/navigation_mechanical"
        android:icon="@drawable/major_mechanical"
        android:title="@string/title_mechanical"/>



</menu>
